examples/mood/tests/evaluate/expression_path_from_number.mood.expected
Error: Expected enum, got f64:
 --> expression_path_from_number.mood:2:5

  | pub fn test(num: f64): f64 {
2 |     num::Bar
  |     ^^^ Expected an enum.
  | }
