examples/mood/tests/evaluate/expression_path_from_number.mood
pub fn test(num: f64): f64 {
    num::Bar
}